frontend/src/main/k8s-config/local/k8s-deploy.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  namespace: my-project
  labels:
    app.kubernetes.io/name: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        kubernetes.io/change-cause: "Update to demo artifact version 1.1.0 test"
      labels:
        app.kubernetes.io/name: frontend
    spec:
      containers:
      - name: frontend
        image: localhost:32000/frontend
        ports:
        - containerPort: 9091
          protocol: TCP
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
