frontend/src/main/k8s-config/local/k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: my-project
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: frontend.example.local
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 9090
      - path: /allQuotes
        backend:
          serviceName: frontend
          servicePort: 9090
